# openfilter

./: .gitignore  RELEASE.md  pyproject.toml
.github/workflows/: create-release.yaml
docker/: image_in.Dockerfile  image_out.Dockerfile  mqtt_out.Dockerfile  recorder.Dockerfile  rest.Dockerfile  video_in.Dockerfile  video_out.Dockerfile  webvis.Dockerfile
docs/: observability-summary.md  observability.md  overview.md  your-first-filter.md
examples/observability-demo/: Makefile  README_OTEL_ONLY.md  app_otel_only.py  config_otel_only.env  custom_processor.py  safe_metrics_otel.yaml
examples/webvis/: Makefile  README.md  add_timestamp.py  docker-compose.multi.yaml  docker-compose.rtsp.yaml  docker-compose.video.yaml  env-example  filter_usage.py  requirements.txt
examples/webvis/latency_analysis/: README.md  latency_analysis.py  network_analysis.py
openfilter/filter_runtime/: filter.py  mq.py
openfilter/observability/: __init__.py  bridge.py  client.py  config.py  registry.py  specs.py
tests/: test_filter.py  test_filter_video_out.py  test_rolllog.py  test_telemetry.py  test_zeromq.py
