[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfilter*"]

[project]
name = "openfilter"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "numpy==2.2.6",
  "opencv-python-headless==4.12.0.88",
  "psutil==7.2.1",
  "pyzmq==27.1.0",
  "openlineage-python==1.42.1",
  "requests==2.32.5",
  "scarf-sdk==0.2.1",
  "opentelemetry-api==1.39.1",
  "opentelemetry-exporter-gcp-monitoring==1.11.0a0",
  "opentelemetry-exporter-otlp==1.39.1",
  "opentelemetry-exporter-otlp-proto-common==1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
  "opentelemetry-exporter-otlp-proto-http==1.39.1",
  "opentelemetry-proto==1.39.1",
  "opentelemetry-resourcedetector-gcp==1.11.0a0",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-semantic-conventions==0.60b1"

]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.distutils.bdist_wheel]
python-tag = "py3"

[project.scripts]
openfilter = "openfilter.cli.__main__:main"


[project.optional-dependencies]

dev = [
  "build==1.4.0",
  "docker==7.1.0",
  "setuptools==80.9.0",  # already included in base deps
  "twine>=6.2.0,<7",
  "wheel==0.45.1",
  "pytest==9.0.2",
  "jq==1.10.0",
  "pytest-cov==7.0.0",
]

mqtt_out = [
  "paho-mqtt==2.1.0",
  "setuptools==80.9.0",
]

recorder = []

image_in = [
  "boto3>=1.42.28",
  "google-cloud-storage==3.8.0",
]

image_out = []

rest = [
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "python-multipart==0.0.21",
]

util = []
video = []

video_in = [
  "setuptools==80.9.0",
  "vidgear[core]==0.3.4",
  "boto3>=1.42.28",
]

video_out = [
  "setuptools==80.9.0",
  "vidgear[core]==0.3.4",
]

webvis = [
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
]

all = [
  "setuptools==80.9.0",

  "paho-mqtt==2.1.0",

  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "python-multipart==0.0.21",

  "google-cloud-monitoring==2.28.0",
  "google-cloud-storage==3.8.0",

  "vidgear[core]==0.3.4",
  "boto3>=1.42.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = "src"
